Align fix

--- a/elements/call-to-action/src/styles.module.scss
+++ b/elements/call-to-action/src/styles.module.scss
@@ -31,11 +31,13 @@
 
     .icon {
         display: inline-block;
+        vertical-align: middle;
     }
 
     .label {
         display: inline-block;
         line-height: 1;
+        vertical-align: middle;
     }
 
     .button {
